# calendar-server

./: .env  Cargo.toml  README.md  db.dockerfile  docker-compose.yml  reset-database.sh
db_schema/: 0.sql  1.sql  2.sql  3.sql
docs/: common.md  configurations.md  index.md  resources.md  rrule-intro.md  scopes.md
docs/dev/: README.md  todo.md
src/: calendar.rs  configs.rs  connection_pool.rs  database_error.rs  database_helpers.rs  env_helpers.rs  event.rs  iter_helpers.rs  main.rs
src/authentication/: auth_guard.rs
src/calendar/: calendar.rs  mod.rs
src/calendar/event/: mod.rs
src/calendar/event/recurrence/: helpers.rs  mod.rs  recurrence_parser.rs
src/recurrence/: helpers.rs  mod.rs  recurrence_parser.rs  serde.rs
src/routes/: common_query_params.rs  mod.rs  routes_calendar.rs  routes_event.rs
