[package]
name = "backend"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2_postgres = "0.16.0"
chrono = "0.4.15"
postgres = { version = "0.17.5", features = ["with-chrono-0_4"] }
thiserror = "1.0.20"
num-traits = "0.2.12"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"