[package]
name = "backend"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2_postgres = "0.18.0"
chrono = { version = "0.4.15", feature = ["serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8"] }
thiserror = "1.0.20"
num-traits = "0.2.12"
rocket = "0.4.5"
rocket_contrib = { verion = "0.4.5", features = ["uuid"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
itertools = "0.10.0"
rocket_okapi = "0.5"
schemars = { version = "0.7", features = ["chrono", "uuid"] }
okapi = { version = "0.4", features = ["derive_json_schema"] }
ring = "0.17.0-alpha.8"
rocket-route-result = { git = "https://github.com/ItsaMeTuni/rocket-route-result", features = ["okapi-0_4"]}